agregando animaciones a inicio y nosotros

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     
 <!-- MAIN -->
     <section class="section">
+        <h2 class="section-tit">¿Qué Hacemos?</h2>
         <div class="articulos">
             <article class="article">
                 <img src="./img/img_talleres.png" alt="taller">
