--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Dancing+Script:wght@400;500&family=Estonia&family=M+PLUS+1:wght@400;500&family=Poppins:wght@500&display=swap" rel="stylesheet"> <!-- Font Famil -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- icon Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="padre-nos">
@@ -42,21 +43,21 @@
 
 
     <main class="pnosotros"><!-- Contenido -->
-        
-         <div class="pnosotros mision">
+        <h2 class="animate__animated animate__heartBeat" >N o s o t r o s</h2>
+         <div>
             <h3>Mision</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
          </div>
-         <div class="pnosotros vision">
+         <div>
             <h3>Vision</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
         </div>
-        <div class="pnanotros objetivo">
+        <div>
             <h3>Objetivo</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
         </div>
         <div class="tit-equipo">
-            <h3>Nuestro Equipo</h3>
+            <h2 class="animate__animated animate__flip">Nuestro Equipo</h2>
         </div>
         <section class="flex-row">
             
@@ -71,7 +72,7 @@
                 <div><img src="../img/img-nos6.jpg" alt="ddesarrollo">Director de Desarrollo</div>
             </div>
         </section>
-
+    </main>
 
 
 
