agregando form bootstrap a contacto

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
 
         <!-- CARROUSEL CON BOOTSTRAP -->
-        <div class="container p-3 m-1-1 mt-2 mb-2 bg-warning opacity-100"> 
+        <div class="container p-3 m-1-1 mt-2 mb-2 bg-secondary opacity-100"> 
             <div class="row">
                 <div class="col-sm-12">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
