--- a/pages/agricultura.html
+++ b/pages/agricultura.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agricultura</title>
-    <link rel="shortcut icon" href="./img/icon_heexac.png" type="image/x-icon"><!-- icono en pestaña -->
+    <link rel="shortcut icon" href="../img/icon_heexac.png" type="image/x-icon"><!-- icono en pestaña -->
     <link rel="stylesheet" href="../css/estilos.css"> <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
