agregando bootstrap a 5 pag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,54 @@
 </head>
 <body>
     <div class="padre">
+        <div class="container-fluid m-0 p-0">
+            <nav class="navbar navbar-expand-lg bg-secondary">
+                <div class="container-fluid">
+                  <a class="navbar-brand fs-2 fw-bold fst-italic text-warning" href="./index.html">Herramientas de la Experiencia, A.C.</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+
+                  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto fs-5">
+                      <li class="nav-item active">
+                        <a class="nav-link text-warning" aria-current="page" href="./index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-warning" href="./pages/nosotros.html">Nosotros</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-warning" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          ¿Que Hacemos?
+                        </a>
+                        <ul class="dropdown-menu bg-secondary bg-opacity-75" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item text-warning fw-bold" href="./pages/cursotaller.html">Cursos y Talleres</a></li>
+                          <li><a class="dropdown-item text-warning fw-bold" href="./pages/agricultura.html">Agricultura</a></li>
+                          <!-- <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-warning" href="./pages/contacto.html">Contacto</a>
+                      </li>
+                      <!-- <li class="nav-item">
+                        <a class="nav-link disabled">Contacto/a>
+                      </li> -->
+                    </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2 fs-6" type="search" placeholder="Buscador" aria-label="Search">
+                      <button class="btn btn-warning" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
+        </div>
+
+
+        
+        
         <header class="header">
+            <!-- INICIO DE HEADER CON CSS 
             <div class="menu">
                 <div class="logo">
                     <a href="index.html">Herramientas de la Experiencia, A. C.</a>
@@ -29,7 +76,8 @@
                     <a href="./pages/agricultura.html"><i class="fa-brands fa-pagelines"></i> <span class="off"> Agricultura</span></a>
                     <a href="./pages/contacto.html"><i class="fa-solid fa-chalkboard-user"></i> <span class="off"> Contacto</span></a>
                 </nav>
-                <!-- <div class="redes">
+
+                !-- <div class="redes">
                     <div><a href="https://www.facebook.com/" target="_blank">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></div>
@@ -37,7 +85,8 @@
                         <i class="fa-brands fa-instagram-square"></i>
                     </a></div>   
                 </div> -->
-            </div>
+           <!-- </div>-->
+
             <div class="texto-principal">
                 <h1>"La vida entera es un gran experimento, entre más hagamos, más intenso viviremos, es como encender una antorcha; al iluminar el camino de otros, se ilumina el nuestro ¡en el mundo no se ha encontrado nada mejor!"</h1>
             </div>
