--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="padre">
-        <div class="container-fluid p-0 position-fixed">
+        <div class="container-fluid p-0 fixed-top">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-toggleable-sm">
                 <!-- <div class="container-fluid"> -->
                   <a class="navbar-brand fs-2 fw-bold fst-italic text-warning mx-3" href="./index.html">Herramientas de la Experiencia, A.C.</a>
