agregando sass map extend each

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,6 +14,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/><!-- animacion -->    
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
     <div class="padre-con">
@@ -154,7 +155,8 @@
             <textarea class="form-control fst-italic fs-6" id="comentarios" rows="3" placeholder="hasta 500 carateres"></textarea>
           </div>
           <div class="col-12 d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary btn--azul">Enviar</button>
+            <button type="submit" class="btn btn-primary boton--borrar">Borrar</button>
         </div>
     </div>
 
