--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../sass/main.css"><!-- archivo SASS -->
 </head>
 <body>
     <div class="padre-nos">
@@ -83,7 +84,7 @@
         <h2 class="animate__animated animate__heartBeat" >N o s o t r o s</h2>
          <div>
             <h3>Mision</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
+            <p class="parrf">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
          </div>
          <div>
             <h3>Vision</h3>
@@ -91,7 +92,7 @@
         </div>
         <div>
             <h3>Objetivo</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
+            <p class="formato-muestra">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, rem ducimus? Laudantium expedita reprehenderit qui quidem quasi necessitatibus? Accusamus hic beatae et nam, aliquam mollitia est in quis. Dolores, alias. Distinctio officiis molestiae hic excepturi asperiores magni dicta commodi veritatis, consequatur soluta natus debitis ratione vitae voluptatem quam aspernatur quis exercitationem placeat nostrum nam quas! Dolore consequatur eius omnis nihil?</p>
         </div>
         <div class="tit-equipo">
             <h2 class="animate__animated animate__flip">Nuestro Equipo</h2>
