subiendo tags SEO y keywords

--- a/pages/agricultura.html
+++ b/pages/agricultura.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agricultura</title>
+    <!-- tags SEO -->
+    <title>Agricultura | HEEXAC</title>
+    <meta name="description" content="Aprender un oficio para autoemplearte, siembra de maiz, hongos, arboles frutales">
+    <meta name="keywords" content="agricultura, siembra, cosecha, autoempleo">
     <link rel="shortcut icon" href="../img/icon_heexac.png" type="image/x-icon"><!-- icono en pestaña -->
     <link rel="stylesheet" href="../css/estilos.css"> <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
