--- a/pages/cursotaller.html
+++ b/pages/cursotaller.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos y Talleres</title>
+    <!-- tags SEO -->
+    <title>Cursos y Talleres | HEEXAC</title>
+    <meta name="description" content="Aprender un oficio para autoemplearte, Cursos y talleres">
+    <meta name="keywords" content="dulces cristalizados, bolsas de mano, reboseria, autoestima, sexualida en adultos mayores">
     <link rel="shortcut icon" href="../img/icon_heexac.png" type="image/x-icon"><!-- icono en pestaña -->
     <link rel="stylesheet" href="../css/estilos.css"> <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
