--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- tags SEO -->
     <title>Herramientas de la Experiencia</title>
+    <meta name="description" content="Aprender un oficio para autoemplearte, no hay limite de edad, Alianza con varios donatarios">
+    <meta name="keywords" content="cursos, talleres, agricultura">
     <link rel="shortcut icon" href="./img/icon_heexac.png" type="image/x-icon"><!-- icono en pestaña -->
     <link rel="stylesheet" href="./css/estilos.css"> <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
