--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <!-- tags SEO -->
+    <title>Nosotros | HEEXAC</title>
+    <meta name="description" content="mision, vision, valores, objetivo">
+    <meta name="keywords" content="quienes somos">
     <link rel="shortcut icon" href="../img/icon_heexac.png" type="image/x-icon"><!-- icono en pestaña -->
     <link rel="stylesheet" href="../css/estilos.css"> <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
