informacion Ultima Entrega

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                       <ul class="dropdown-menu bg-secondary bg-opacity-75" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item text-warning fw-bold" href="./pages/cursotaller.html"><i class="fa-solid fa-pen-ruler"></i> Cursos y Talleres</a></li>
                         <li><a class="dropdown-item text-warning fw-bold" href="./pages/agricultura.html"><i class="fa-brands fa-pagelines"></i> Agricultura</a></li>
+                        <li><a class="dropdown-item text-warning fw-bold" href="./pages/donatarios.html"><i class="fa-solid fa-people-carry-box"></i></i> Donatarios</a></li>
                       </ul>
                     </li>
                     <li class="nav-item">
@@ -65,7 +66,7 @@
       
       <header class="header">
           <div class="texto-principal">
-              <h1>"La vida entera es un gran experimento, entre más hagamos, más intenso viviremos, es como encender una antorcha; al iluminar el camino de otros, se ilumina el nuestro ¡en el mundo no se ha encontrado nada mejor!"</h1>
+              <h1>"La Vida entera es un <strong>Gran Experimento</strong>, entre más hagamos, más <strong>Intenso</strong> viviremos, es como encender una antorcha; al iluminar el camino de otros, <strong>se ilumina el nuestro</strong>¡en el mundo no se ha encontrado <strong>Nada Mejor</strong>!"</h1>
           </div>
       </header>
 
@@ -83,7 +84,7 @@
                     <img src="./img/mone_01.jpg" class="card-img-top" alt="talleres">
                     <div class="card-body">
                       <h5 class="card-title text-center fs-4">Talleres y Manualidades</h5>
-                      <p class="card-text p-2">Costura, Reboceria, Bolsas de mano, Juegos de Baño, Reciclado, Dulces Cristalizados, Panaderia. </p>
+                      <p class="card-text p-2">Corte y Confección, Reboceria, Bolsas de mano, Juegos de Baño, Dulces Cristalizados, Panaderia, Manualidades con Reciclado...</p>
                       <a href="./pages/cursotaller.html" class="btn btn-outline-warning btn-lg text-white">Ver mas ...</a>
                     </div>
                   </div>
@@ -93,7 +94,7 @@
                     <img src="./img/curso_1.jpg" class="card-img-top" alt="cursos">
                     <div class="card-body">
                       <h5 class="card-title text-center fs-4">Cursos</h5>
-                      <p class="card-text p-2">Cursos de Belleza, Autoestima, Tanatologia, Sexualidad en Adultos mayores, Adicciones, Protoclos de Seguridad en esta Pandemia.</p>
+                      <p class="card-text p-2">Cursos de Belleza, Autoestima, Tanatologia, Sexualidad en Adultos mayores "Reinventandot el Amor", Gerontología, Enfermedades: Diabétes, Depresión, Demencia Senil... </p>
                       <a href="./pages/cursotaller.html" class="btn btn-outline-warning btn-lg text-white">Ver mas ...</a>
                     </div>  
                   </div>
@@ -104,25 +105,35 @@
                     <img src="./img/agri_01.JPG" class="card-img-top" alt="agricul">
                     <div class="card-body">
                       <h5 class="card-title text-center fs-4">Agricultura</h5>
-                      <p class="card-text p-2">Aprende hacer hortalizas en casa, siembra de setas, maiz y mas frutas y verduras y lo que puedes preparar con esa cosecha</p>
+                      <p class="card-text p-2">Aprende a elaborar hortalizas en casa, siembra de setas, maiz, calabazas, frutas y verduras te sorprenderas de lo que puedes hacer con las cosecha...</p>
                       <a href="./pages/agricultura.html" class="btn btn-outline-warning btn-lg text-white">Ver mas ...</a>
                     </div>
                   </div>
               </div>
               <div class="col-12 col-md-4 col-lg-3 d-flex justify-content-center">
                     <div class="card" style="width: 16rem; background: gray; text-align: justify; padding: 5px;">
-                      <img src="./img/img_donatarios.jpg" class="card-img-top" alt="donatarios">
+                      <img src="./img/dona_homedepot.jpeg" class="card-img-top" alt="donatarios">
                       <div class="card-body">
                         <h5 class="card-title text-center fs-4">Donatarios</h5>
-                        <p class="card-text p-2">Tenemos alianzas con Empresas que hacen donaciones para los mas vulnerables, niñas, niños, jóvenes, adultos, madres solteras y adultos mayores.</p>
-                        <a href="#" class="btn btn-outline-warning btn-lg text-white">Ver mas ...</a>
+                        <p class="card-text p-2">Alianzas con Empresas que hacen donaciones con el Objetivo de Ayudar a la Comunidad, los mas vulnerables, niñas, niños, jóvenes, adultos, madres solteras y adultos mayores.</p>
+                        <a href="./pages/donatarios.html" class="btn btn-outline-warning btn-lg text-white">Ver mas ...</a>
                       </div>  
                     </div>
               </div>
           </div>
       </div>
 
-
+      <section class="seccionpadre">
+        <div class="seccionpadre02">
+          <div class="seccionpadre02--entrev">
+            <img src="./img/entrevista_canalp02.jpeg" alt="img_entre">
+          </div>
+          <div class="seccionpadre02--txtenlace">
+            <h4>Entrevistas en Canal Patrio con nuestra Querida Amiga <strong>Mary Missett</strong></h4>
+            <a href="https://www.facebook.com/100004538679058/videos/495172098148495/" target="_blank">Ver más... Da clic Aquí</a>
+          </div>
+        </div>
+      </section>
 
 
 
@@ -133,7 +144,7 @@
                   
           <div class="footerpadre02--redes">
               <h4>Siguenos en Redes</h4>
-              <a href="https://www.facebook.com/" target="_blank">
+              <a href="https://www.facebook.com/profile.php?id=100069198354605" target="_blank">
                   <i class="fa-brands fa-facebook-square"></i>
               </a>
               <a href="https://www.instagram.com" target="_blank">
